# vendor-aac-hardware-richtap-vibrator

./: .gitignore  Cargo.toml  build.rs  readme.md
aidl/android/hardware/vibrator/: IVibrator.aidl
aidl/android/os/: ParcelFileDescriptor.aidl
src/: logger.rs  main.rs  richtap.rs  sysfs.rs  vibrator.rs
